# hotdog-handheld-launcher

./: .gitignore  Cargo.toml  README.md  UX.md  skills-lock.json
.cowork/: Skills.toml
.github/agents/: refactoring-expert.agent.md
optimizations/: gaming-mode.ps1  gaming-mode.yaml  rollback.bat
src/: app.rs  daemon.rs  lib.rs  main.rs  navigation.rs  shell.rs
src/database/: app_repository.rs  game_repository.rs  mod.rs  schema.rs
src/focus/: focus_ring.rs  grid_navigator.rs  mod.rs
src/input/: input_bridge.rs  mod.rs
src/process/: launcher.rs  lifecycle.rs  mod.rs
src/scanner/: game_scanner.rs  mod.rs
src/ui/: README.md  actions.rs  mod.rs  theme.rs
src/ui/components/: button_hint.rs  mod.rs  tab_bar.rs
src/ui/tiles/: game_carousel.rs  metro_tile.rs  mod.rs  tile_grid.rs
