[package]
name = "handheld-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2"
gilrs = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
once_cell = "1.19"
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_System_Threading"] }